--- a/FROM EVERYONE.html
+++ b/FROM EVERYONE.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>2023.12.31</title>
-    <link rel="stylesheet" href="Riko's  birthday.css" />
+    <link rel="stylesheet" href="Rikos-birthday.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   </head>
   <body>
@@ -117,7 +117,7 @@
     <nav id="g-nav">
       <div id="g-nav-list">
         <ul>
-          <li><a href="Riko's  birthday.html">Happy Birthday</a></li>
+          <li><a href="index.html">Happy Birthday</a></li>
           <li>
             <a href="#Birthday-card">Birthday card</a>
           </li>
@@ -131,6 +131,6 @@
       src="https://code.jquery.com/jquery-3.4.1.min.js"
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
       crosssorigin="anonymos"></script>
-    <script src="Riko's  birthday.js"></script>
+    <script src="Rikos-birthday.js"></script>
   </body>
 </html>
