--- a/index.html
+++ b/index.html
@@ -5,17 +5,25 @@
   <head>
     <meta charset="UTF-8" />
     <title>2023.12.31</title>
-    ///
+    <kink rel="stylesheet" href="Rikos-birthday.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   </head>
   <body>
     <header>
+      <img class="header" src="ikkisei.png" alt="logo" />
+      <!--ここにロゴの画像を挿入-->
+    </header>
+    <img class="gazou" src="card.png" alt="hello" />
 
     <script
       type="text/javascript"
       src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.3.2/dist/confetti.browser.min.js"></script>
     <br /><br /><br /><br />
     <a href="FROM EVERYONE.html">
+
+      <img class="tegami" src="tap.jpg" alt="medetai" />
+    </a>
+    <img class="syuugou" src="syuugou.png" alt="minnna" />
 
 
     <!-- マウス -->
@@ -45,5 +53,6 @@
       src="https://code.jquery.com/jquery-3.4.1.min.js"
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
       crosssorigin="anonymos"></script>
+    <script src="Rikos-birthday.js"></script>
   </body>
 </html>
