--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>2023.12.31</title>
-    <kink rel="stylesheet" href="Rikos-birthday.css">
+    <link rel="stylesheet" href="Rikos-birthday.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   </head>
   <body>
@@ -20,11 +20,9 @@
       src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.3.2/dist/confetti.browser.min.js"></script>
     <br /><br /><br /><br />
     <a href="FROM EVERYONE.html">
-
       <img class="tegami" src="tap.jpg" alt="medetai" />
     </a>
     <img class="syuugou" src="syuugou.png" alt="minnna" />
-
 
     <!-- マウス -->
     <div class="scrolldown">
