change css and index.html

--- a/FROM EVERYONE.html
+++ b/FROM EVERYONE.html
@@ -23,7 +23,7 @@
         <img class="regular" src="./a/kai.png" alt="kai" />
     </div>
         <img class="kaworu" src="./a/ka.png" alt="kiah" />
-        <img class="kaworu" src="./a/kai.png" alt="kiah" />
+        <img class="kaworu" src="./a/kia.png" alt="kiah" />
     <div class="box">
         <img class="regular" src="./a/kisaki.jpg" alt="kiah" />
         <img class="regular" src="./a/kou.jpg" alt="kouuske" />
@@ -45,7 +45,7 @@
     <div class="box">
         <img class="regular" src="./a/noko.png" alt="kiah" />
         <img class="regular" src="./a/haruto.png" alt="kiah" />
-        <img class="regular" src="./a/hinako.png" alt="kiah" />
+        <img class="regular" src="./a/hinako.jpg" alt="kiah" />
         <img class="regular" src="./a/tomoko.png" alt="kiah" />
     </div>
         <img class="kaworu" src="./a/hukune.png" alt="kiah" />
@@ -56,7 +56,7 @@
         <img class="regular" src="./a/yamato.jpg" alt="kiah" />
         <img class="regular" src="./a/mei.jpg" alt="kiah" />
         <img class="regular" src="./a/yui.png" alt="kiah" />
-        <img class="regular" src="./a/yukina.png" alt="kiah" />
+        <img class="regular" src="./a/tukina.png" alt="kiah" />
         <img class="regular" src="./a/issinn.jpg" alt="kiah" />
         <img class="regular" src="./a/enn.png" alt="kiah" />
         <img class="regular" src="./a/sora.jpg" alt="kiah" />
